<resources>
    <string name="facebook_app_id">253163152258200</string>
    <string name="fb_login_protocol_scheme">fb253163152258200</string>


    <string name="app_name">Meeting Point</string>
    <string name="login_username">Username</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_location">Map</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="login_with_gmail">Login with Gmail</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_password">Password</string>
    <string name="login_repeat_password">Repeat password</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_email">Email</string>
    <string name="login_register_now">Register now</string>
    <string name="login_no_account">No account?</string>

    <string name="bottom_menu_facebook">Facebook</string>
    <string name="bottom_menu_map">Map</string>
    <string name="bottom_menu_chat">Chat</string>

    <string name="map_snack_message_marker_added">Marker added</string>
    <string name="map_create_new_event">Create new event</string>
    <string name="map_event_name">Event name</string>
    <string name="map_detail">Detail</string>

</resources>
