<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Label
        android:id="@+id/lb_dialog_name"
        android:layout_width="340dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/map_create_new_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lb_event_name"
        android:layout_width="340dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_dialog_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/map_event_name"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lb_detail"
        android:layout_width="340dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_event_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/map_detail"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
